--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -3084,7 +3084,7 @@
     <string name="personal_data_section_title" msgid="6368610168625722682">"Personlige oplysninger"</string>
     <string name="backup_data_title" msgid="507663517227498525">"Sikkerhedskopiér data"</string>
     <string name="backup_data_summary" msgid="8054551085241427531">"Sikkerhedskopiér appdata, Wi-Fi-adgangskoder og andre indstillinger på Googles servere"</string>
-    <string name="backup_configure_account_title" msgid="8574055186903658842">"Backupkonto"</string>
+    <string name="backup_configure_account_title" msgid="8574055186903658842">"Konto til backup"</string>
     <string name="backup_data_management_title" msgid="6596830198441939702">"Administrer konto til backup"</string>
     <string name="include_app_data_title" msgid="2969603876620594523">"Inkluder appdata"</string>
     <string name="auto_restore_title" msgid="4124345897936637561">"Automatisk gendannelse"</string>
