--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -1603,7 +1603,7 @@
     <string name="storage_low_summary" msgid="7341022293583384506">"Որոշ համակարգային գործառույթներ, ինչպես օրինակ համաժամացումը հնարավոր է` այնքան էլ ճշգրիտ չաշխատեն: Փորձեք տարածք ազատել` ջնջելով կամ հանելով այնպիսի հատվածներ, ինչպիսիք են հավելածները կամ մեդիա բովանդակությունը:"</string>
     <string name="storage_menu_rename" msgid="8549835371429159336">"Վերանվանել"</string>
     <string name="storage_menu_mount" msgid="4760531872302820569">"Միացնել"</string>
-    <string name="storage_menu_unmount" msgid="8171552487742912282">"Անջատել"</string>
+    <string name="storage_menu_unmount" msgid="8171552487742912282">"Հանել"</string>
     <string name="storage_menu_format" msgid="5454870642788909443">"Ձևաչափ"</string>
     <string name="storage_menu_format_public" msgid="5567214442727034630">"Ձևաչափել որպես դյուրակիր"</string>
     <string name="storage_menu_format_private" msgid="3208326980027382079">"Ձևաչափել որպես ներքին"</string>
@@ -1685,7 +1685,7 @@
     <string name="storage_wizard_init_v2_external_summary" msgid="6436419488235871823">"Ֆայլերն ու լուսանկարները սարքից սարք տեղափոխելու համար"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"Շարժական կրիչ"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Կարգավորել ավելի ուշ"</string>
-    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Ֆորմատավորե՞լ <xliff:g id="NAME">^1</xliff:g> հիշասարքը"</string>
+    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Ֆորմատավորե՞լ այս <xliff:g id="NAME">^1</xliff:g>ը"</string>
     <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"<xliff:g id="NAME_0">^1</xliff:g> հիշասարքում ֆայլեր, լուսանկարներ ու հավելվածներ պահելու համար անհրաժեշտ է ֆորմատավորել այն։ \n\n<xliff:g id="NAME_1">^2</xliff:g> հիշասարքից բոլոր ֆայլերը կջնջվեն։ Տվյալների կորստից խուսափելու համար պատճենեք դրանք այլ <xliff:g id="NAME_2">^3</xliff:g> հիշասարքում կամ կրիչում։"</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"<xliff:g id="NAME">^1</xliff:g>. ֆորմատավորել"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Տեղափոխե՞լ <xliff:g id="NAME">^1</xliff:g>"</string>
