--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -1603,7 +1603,7 @@
     <string name="storage_low_summary" msgid="7341022293583384506">"Beberapa fungsi sistem, seperti sinkronisasi, mungkin tidak bekerja dengan benar. Coba kosongkan ruang dengan menghapus atau mencopot sematan item, seperti konten media atau aplikasi."</string>
     <string name="storage_menu_rename" msgid="8549835371429159336">"Ganti nama"</string>
     <string name="storage_menu_mount" msgid="4760531872302820569">"Pasang"</string>
-    <string name="storage_menu_unmount" msgid="8171552487742912282">"Cabut"</string>
+    <string name="storage_menu_unmount" msgid="8171552487742912282">"Keluarkan"</string>
     <string name="storage_menu_format" msgid="5454870642788909443">"Format"</string>
     <string name="storage_menu_format_public" msgid="5567214442727034630">"Format sebagai portabel"</string>
     <string name="storage_menu_format_private" msgid="3208326980027382079">"Format sebagai internal"</string>
@@ -3084,8 +3084,8 @@
     <string name="personal_data_section_title" msgid="6368610168625722682">"Data pribadi"</string>
     <string name="backup_data_title" msgid="507663517227498525">"Cadangkan data saya"</string>
     <string name="backup_data_summary" msgid="8054551085241427531">"Mencadangkan data aplikasi, sandi Wi-Fi, dan setelan lainnya ke server Google"</string>
-    <string name="backup_configure_account_title" msgid="8574055186903658842">"Akun cadangan"</string>
-    <string name="backup_data_management_title" msgid="6596830198441939702">"Kelola akun cadangan"</string>
+    <string name="backup_configure_account_title" msgid="8574055186903658842">"Akun pencadangan"</string>
+    <string name="backup_data_management_title" msgid="6596830198441939702">"Kelola akun pencadangan"</string>
     <string name="include_app_data_title" msgid="2969603876620594523">"Sertakan data aplikasi"</string>
     <string name="auto_restore_title" msgid="4124345897936637561">"Pemulihan otomatis"</string>
     <string name="auto_restore_summary" msgid="6830198851045584001">"Pulihkan cadangan setelan dan data saat menginstal ulang aplikasi"</string>
@@ -3448,7 +3448,7 @@
     <string name="nfc_payment_set_default" msgid="4101484767872365195">"Di terminal nirsentuh, bayar dengan <xliff:g id="APP">%1$s</xliff:g>"</string>
     <string name="nfc_payment_set_default_instead_of" msgid="565237441045013280">"Di terminal tanpa kontak kartu fisik, bayar dengan <xliff:g id="APP_0">%1$s</xliff:g>.\n\nIni menggantikan <xliff:g id="APP_1">%2$s</xliff:g> sebagai aplikasi pembayaran default."</string>
     <string name="nfc_payment_btn_text_set_deault" msgid="1821065137209590196">"Jadikan default"</string>
-    <string name="nfc_payment_btn_text_update" msgid="5159700960497443832">"Update"</string>
+    <string name="nfc_payment_btn_text_update" msgid="5159700960497443832">"Perbarui"</string>
     <string name="nfc_work_text" msgid="2496515165821504077">"Kerja"</string>
     <string name="restriction_settings_title" msgid="4293731103465972557">"Batasan"</string>
     <string name="restriction_menu_reset" msgid="92859464456364092">"Hapus batasan"</string>
