--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -1686,7 +1686,7 @@
     <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"Memoria portatile"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Configura più tardi"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Vuoi formattare il dispositivo <xliff:g id="NAME">^1</xliff:g>?"</string>
-    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"È necessario formattare il dispositivo <xliff:g id="NAME_0">^1</xliff:g> per poter memorizzare app, file e contenuti multimediali. \n\nLa formattazione cancellerà i contenuti presenti su <xliff:g id="NAME_1">^2</xliff:g>. Per evitare di perdere i contenuti, effettua il backup su un altro dispositivo <xliff:g id="NAME_2">^3</xliff:g> o su un dispositivo differente."</string>
+    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"È necessario formattare il dispositivo <xliff:g id="NAME_0">^1</xliff:g> per poter memorizzare app, file e contenuti multimediali. \n\nLa formattazione cancellerà i contenuti presenti sul dispositivo <xliff:g id="NAME_1">^2</xliff:g>. Per evitare di perdere i contenuti, effettua il backup su un altro dispositivo <xliff:g id="NAME_2">^3</xliff:g> o di altro tipo."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"Formatta <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Spostare i contenuti su <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_migrate_v2_body" product="tablet" msgid="4541523202790415721">"Puoi spostare file, contenuti multimediali e alcune app sul dispositivo <xliff:g id="NAME">^1</xliff:g>. \n\nCon questo spostamento, che dovrebbe richiedere circa <xliff:g id="DURATION">^3</xliff:g>, verranno liberati <xliff:g id="SIZE">^2</xliff:g> di spazio di archiviazione del tablet."</string>
@@ -3912,7 +3912,7 @@
     <string name="gentle_notifications_display_summary_shade_lock" msgid="3936088046873705625">"Verranno visualizzate nell\'area a discesa e nella schermata di blocco"</string>
     <string name="gentle_notifications_display_summary_shade_status" msgid="3363137853729359907">"Verranno visualizzate nell\'area a discesa e nella barra di stato"</string>
     <string name="gentle_notifications_display_summary_shade_status_lock" msgid="2068738866725616212">"Verranno visualizzate nell\'area a discesa, nella barra di stato e nella schermata di blocco"</string>
-    <string name="silent_notifications_status_bar" msgid="6113307620588767516">"Nascondi le notifiche silenziose nella barra di stato"</string>
+    <string name="silent_notifications_status_bar" msgid="6113307620588767516">"Nascondi notifiche silenziose nella barra di stato"</string>
     <string name="notification_pulse_title" msgid="8013178454646671529">"Luce lampeggiante"</string>
     <string name="lock_screen_notifications_title" msgid="2876323153692406203">"Privacy"</string>
     <string name="lockscreen_bypass_title" msgid="6519964196744088573">"Ignora schermata di blocco"</string>
@@ -4915,7 +4915,7 @@
     <string name="double_tap_power_for_camera_title" msgid="7982364144330923683">"Apri rapidamente la fotocamera"</string>
     <string name="double_tap_power_for_camera_summary" msgid="1100926048598415509">"Per aprire velocemente la fotocamera, premi due volte il tasto di accensione da qualsiasi schermata."</string>
     <string name="double_tap_power_for_camera_suggestion_title" msgid="4299496243418753571">"Apri rapidamente la fotocamera"</string>
-    <string name="double_twist_for_camera_mode_title" msgid="472455236910935684">"Cambia fotocamera per modalità selfie"</string>
+    <string name="double_twist_for_camera_mode_title" msgid="472455236910935684">"Cambia fotocamera per selfie"</string>
     <string name="double_twist_for_camera_mode_summary" msgid="592503740044744951"></string>
     <string name="double_twist_for_camera_suggestion_title" msgid="8178844037382604158">"Scatta selfie più rapidamente"</string>
     <string name="system_navigation_title" msgid="1698862900901417194">"Navigazione del sistema"</string>
@@ -5158,7 +5158,7 @@
     <string name="enable_gnss_raw_meas_full_tracking" msgid="1206679951510243341">"Forza esecuzione completa delle misurazioni GNSS"</string>
     <string name="enable_gnss_raw_meas_full_tracking_summary" msgid="3841463141138247167">"Monitora tutte le costellazioni e le frequenze GNSS senza ciclo di lavoro utile"</string>
     <string name="input_method_category" msgid="2252659253631639005">"Metodo di immissione"</string>
-    <string name="stylus_handwriting" msgid="2154591374132794563">"Scrittura a mano libera stilo"</string>
+    <string name="stylus_handwriting" msgid="2154591374132794563">"Scrittura a mano libera con stilo"</string>
     <string name="stylus_handwriting_summary" msgid="6333425895172696950">"Quando è attivato, il metodo di immissione corrente riceve MotionEvent stilo se un editor ha impostato lo stato attivo"</string>
     <string name="device_theme" msgid="5027604586494772471">"Tema del dispositivo"</string>
     <string name="default_theme" msgid="4815428567082263639">"Valore predefinito"</string>
@@ -5659,7 +5659,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Usa Blocco app su schermo"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Usa Opzioni sviluppatore"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Usa servizio di stampa"</string>
-    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Consenti più utenti"</string>
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Consenti utenti multipli"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Usa debug wireless"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Usa Preferenze del driver di grafica"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Usa risparmio energetico"</string>
