--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -1728,7 +1728,7 @@
     <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"Pamięć przenośna"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Skonfiguruj później"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Sformatować: <xliff:g id="NAME">^1</xliff:g>?"</string>
-    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Ten nośnik <xliff:g id="NAME_0">^1</xliff:g> trzeba sformatować, by można było zapisywać na nim aplikacje, pliki i multimedia. \n\nFormatowanie usunie dotychczasową zawartość nośnika <xliff:g id="NAME_1">^2</xliff:g>. Aby nie utracić danych, utwórz ich kopię zapasową na innym nośniku <xliff:g id="NAME_2">^3</xliff:g> lub urządzeniu."</string>
+    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Ten nośnik (<xliff:g id="NAME_0">^1</xliff:g>) trzeba sformatować, aby można było zapisywać na nim aplikacje, pliki i multimedia. \n\nFormatowanie usunie dotychczasową zawartość nośnika <xliff:g id="NAME_1">^2</xliff:g>. Aby nie utracić danych, utwórz ich kopię zapasową na innym nośniku (<xliff:g id="NAME_2">^3</xliff:g>) lub urządzeniu."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"Formatuj: <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Przenieść dane na: <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_migrate_v2_body" product="tablet" msgid="4541523202790415721">"Możesz przenieść pliki, multimedia i niektóre aplikacje na ten nośnik <xliff:g id="NAME">^1</xliff:g>. \n\nTa czynność potrwa około <xliff:g id="DURATION">^3</xliff:g> i zwolni do <xliff:g id="SIZE">^2</xliff:g> pamięci tabletu."</string>
@@ -3862,7 +3862,7 @@
     <string name="zen_mode_block_effect_light" msgid="1997222991427784993">"Nie włączaj migania diody"</string>
     <string name="zen_mode_block_effect_peek" msgid="2525844009475266022">"Nie wyświetlaj powiadomień na ekranie"</string>
     <string name="zen_mode_block_effect_status" msgid="5765965061064691918">"Ukrywaj ikony na pasku stanu u góry ekranu"</string>
-    <string name="zen_mode_block_effect_badge" msgid="332151258515152429">"Ukrywaj plakietki z powiadomieniem na ikonach aplikacji"</string>
+    <string name="zen_mode_block_effect_badge" msgid="332151258515152429">"Ukrywaj kropki powiadomień na ikonach aplikacji"</string>
     <string name="zen_mode_block_effect_ambient" msgid="1247740599476031543">"Nie wybudzaj w przypadku powiadomień"</string>
     <string name="zen_mode_block_effect_list" msgid="7549367848660137118">"Ukrywaj w obszarze powiadomień"</string>
     <string name="zen_mode_block_effect_summary_none" msgid="6688519142395714659">"Nigdy"</string>
@@ -3963,7 +3963,7 @@
     <string name="snooze_options_title" msgid="2109795569568344617">"Zezwalaj na odkładanie powiadomień"</string>
     <string name="hide_silent_icons_title" msgid="5951392023601167577">"Ukryj ikony z subtelnych powiadomień"</string>
     <string name="hide_silent_icons_summary" msgid="623763437631637232">"Ikony z subtelnych powiadomień nie są pokazywane na pasku stanu"</string>
-    <string name="notification_badging_title" msgid="5469616894819568917">"Plakietka z powiadomieniem na ikonie aplikacji"</string>
+    <string name="notification_badging_title" msgid="5469616894819568917">"Kropka powiadomienia na ikonie aplikacji"</string>
     <string name="notification_people_strip_title" msgid="1185857822541001139">"Pokaż pasek ostatnich rozmów"</string>
     <string name="notification_bubbles_title" msgid="5681506665322329301">"Dymki"</string>
     <string name="bubbles_feature_education" msgid="4088275802688887634">"Niektóre powiadomienia i inne treści mogą pojawiać się jako dymki na ekranie. Aby otworzyć dymek, kliknij go. Aby zamknąć, przeciągnij go w dół ekranu."</string>
@@ -4219,8 +4219,8 @@
     <string name="app_notification_block_summary" msgid="1804611676339341551">"Nigdy nie pokazuj tych powiadomień"</string>
     <string name="notification_content_block_title" msgid="6689085826061361351">"Pokazuj powiadomienia"</string>
     <string name="notification_content_block_summary" msgid="329171999992248925">"Nigdy nie pokazuj powiadomień w obszarze powiadomień ani na urządzeniach peryferyjnych"</string>
-    <string name="notification_badge_title" msgid="6854537463548411313">"Zezwalaj na plakietkę z powiadomieniem"</string>
-    <string name="notification_channel_badge_title" msgid="6505542437385640049">"Pokazuj plakietkę z powiadomieniem"</string>
+    <string name="notification_badge_title" msgid="6854537463548411313">"Zezwalaj na kropkę powiadomienia"</string>
+    <string name="notification_channel_badge_title" msgid="6505542437385640049">"Pokazuj kropkę powiadomienia"</string>
     <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"Ignoruj Nie przeszkadzać"</string>
     <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"Zezwól na działanie tych powiadomień, gdy tryb Nie przeszkadzać jest włączony"</string>
     <string name="app_notification_visibility_override_title" msgid="7778628150022065920">"Ekran blokady"</string>
