--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -1706,8 +1706,8 @@
     <string name="storage_wizard_init_v2_external_summary" msgid="6436419488235871823">"Za prenošenje fajlova i medija s jednog uređaja na drugi"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"Prenosiva pohrana"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Postavi kasnije"</string>
-    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formatirati ovu pohranu <xliff:g id="NAME">^1</xliff:g>?"</string>
-    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Da biste pohranili aplikacije, fajlove i medije, potrebno je formatirati uređaj <xliff:g id="NAME_0">^1</xliff:g>. \n\nFormatiranjem se potpuno briše postojeći sadržaj pohrane <xliff:g id="NAME_1">^2</xliff:g>. Da ne biste izgubili sadržaj, napravite sigurnosnu kopiju na drugu pohranu <xliff:g id="NAME_2">^3</xliff:g> ili uređaj."</string>
+    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formatirati medij <xliff:g id="NAME">^1</xliff:g>?"</string>
+    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Da pohranjujete aplikacije, fajlove i medije, potrebno je formatirati medij <xliff:g id="NAME_0">^1</xliff:g>. \n\nFormatiranjem se potpuno briše postojeći sadržaj medija <xliff:g id="NAME_1">^2</xliff:g>. Da ne izgubite sadržaj, napravite sigurnosnu kopiju na drugi medij <xliff:g id="NAME_2">^3</xliff:g> ili uređaj."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"Format. pohranu <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Premjestiti sadržaj na: <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_migrate_v2_body" product="tablet" msgid="4541523202790415721">"Fajlove, medije i određene aplikacije možete premjestiti na uređaj <xliff:g id="NAME">^1</xliff:g>. \n\nTime ćete osloboditi <xliff:g id="SIZE">^2</xliff:g> pohrane na tabletu što bi trebalo trajati oko <xliff:g id="DURATION">^3</xliff:g>."</string>
