--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -62,7 +62,7 @@
     <string name="font_size_preview_text_body" msgid="3323732544011097199">"I přestože měli oči chráněné zelenými brýlemi, Dorotka a její přátelé byli oslněni krásou celého města. Ulice byly lemovány nádhernými domy ze zeleného mramoru posetého blyštivými smaragdy. Chodníky byly dlážděny stejným druhem zeleného mramoru a jednotlivé dlaždice od sebe dělily řady úzce sázených smaragdů, které se leskly ve slunečním svitu. Okenní tabule byly ze zeleného skla, dokonce i obloha nad městem měla zelený nádech i sluneční paprsky byly zelené. \n\nKolem procházelo mnoho lidí – muži, ženy i děti. Všichni byli zelení a nosili zelené oblečení. Zraky všech se upíraly na Dorotku a její neobvykle různorodé společníky. Když děti zahlédly i Lva, utíkaly se schovat za své maminky. Nikdo se neodvážil na skupinku promluvit. V ulici bylo mnoho obchodů a Dorotka si všimla, že také v nich je všechno zelené. Bonbony, popcorn, boty, klobouky, oblečení všech druhů. Na jednom místě prodávali zelenou limonádu, a když ji děti kupovaly, platily za ni zelenými mincemi. \n\nZdálo se, že ve městě nejsou koně ani jakákoli zvířata. Lidé k převážení věcí používali zelené vozíky, které tlačili před sebou. Všichni vypadali, že jsou spokojeni a daří se jim."</string>
     <string name="font_size_save" msgid="206892409190870726">"OK"</string>
     <string name="sdcard_setting" product="nosdcard" msgid="6071836464978826249">"Úložiště USB"</string>
-    <string name="sdcard_setting" product="default" msgid="3713462184783824923">"Karta SD"</string>
+    <string name="sdcard_setting" product="default" msgid="3713462184783824923">"SD karta"</string>
     <string name="bluetooth" msgid="8898478620943459654">"Bluetooth"</string>
     <string name="bluetooth_is_discoverable" msgid="4798961627677790935">"Viditelné pro všechna okolní zařízení Bluetooth (<xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g>)"</string>
     <string name="bluetooth_is_discoverable_always" msgid="8122823110652921674">"Viditelné pro všechny okolní zařízení Bluetooth"</string>
@@ -198,19 +198,19 @@
     <string name="sdcard_settings_screen_mass_storage_text" msgid="129059989000252994">"Povolit velkokapacitní úložiště USB"</string>
     <string name="sdcard_settings_total_bytes_label" msgid="5298511430610207103">"Celková paměť (bajty):"</string>
     <string name="sdcard_settings_not_present_status" product="nosdcard" msgid="6189761476582690998">"Úložiště USB není připojeno."</string>
-    <string name="sdcard_settings_not_present_status" product="default" msgid="6601962586941623203">"Karta SD není k dispozici."</string>
+    <string name="sdcard_settings_not_present_status" product="default" msgid="6601962586941623203">"SD karta není k dispozici."</string>
     <string name="sdcard_settings_available_bytes_label" msgid="7721283102767669004">"Dostupná paměť (bajty):"</string>
     <string name="sdcard_settings_mass_storage_status" product="nosdcard" msgid="4878190674458263222">"Úlož. USB užito jako velkokap."</string>
-    <string name="sdcard_settings_mass_storage_status" product="default" msgid="8850227049504860012">"Karta SD je využívána jako velkokapacitní paměťové zařízení."</string>
+    <string name="sdcard_settings_mass_storage_status" product="default" msgid="8850227049504860012">"SD karta je využívána jako velkokapacitní paměťové zařízení."</string>
     <string name="sdcard_settings_unmounted_status" product="nosdcard" msgid="1053258530368541571">"Úlož. USB lze bezp. odebrat."</string>
     <string name="sdcard_settings_unmounted_status" product="default" msgid="5813940671700138561">"Nyní můžete kartu SD bezpečně odebrat."</string>
     <string name="sdcard_settings_bad_removal_status" product="nosdcard" msgid="209564009449909311">"Úlož. USB odebráno za provozu."</string>
-    <string name="sdcard_settings_bad_removal_status" product="default" msgid="6817342973919819392">"Karta SD byla odstraněna za provozu."</string>
+    <string name="sdcard_settings_bad_removal_status" product="default" msgid="6817342973919819392">"SD karta byla odstraněna za provozu."</string>
     <string name="sdcard_settings_used_bytes_label" msgid="5646588579332741943">"Obsazená paměť (bajty):"</string>
     <string name="sdcard_settings_scanning_status" product="nosdcard" msgid="8037280964384235345">"Hledání médií v úložišti USB…"</string>
     <string name="sdcard_settings_scanning_status" product="default" msgid="3297316465982471437">"Vyhledávání mediálních souborů na kartě SD..."</string>
     <string name="sdcard_settings_read_only_status" product="nosdcard" msgid="3444648373391629840">"Úlož. USB připoj. jen ke čtení"</string>
-    <string name="sdcard_settings_read_only_status" product="default" msgid="4338796260718910164">"Karta SD je připojena pouze pro čtení."</string>
+    <string name="sdcard_settings_read_only_status" product="default" msgid="4338796260718910164">"SD karta je připojena pouze pro čtení."</string>
     <string name="skip_label" msgid="6380034601349015895">"Přeskočit"</string>
     <string name="next_label" msgid="1248293387735652187">"Další"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Jazyky"</string>
@@ -246,7 +246,7 @@
     <string name="activity_picker_label" msgid="351250401590691126">"Vybrat aktivitu"</string>
     <string name="display_label" msgid="3056320781191343221">"Displej"</string>
     <string name="sd_card_settings_label" product="nosdcard" msgid="1850505156136467106">"Úložiště USB"</string>
-    <string name="sd_card_settings_label" product="default" msgid="8715502912796241588">"Karta SD"</string>
+    <string name="sd_card_settings_label" product="default" msgid="8715502912796241588">"SD karta"</string>
     <string name="proxy_settings_label" msgid="6300573815025557843">"Nastavení proxy serveru"</string>
     <string name="cancel" msgid="5780102414089664898">"Zrušit"</string>
     <string name="okay" msgid="4827099303045669054">"OK"</string>
@@ -1602,7 +1602,7 @@
     <string name="status_awake_time" msgid="2573925324168081586">"Doba provozu"</string>
     <string name="internal_memory" msgid="1869518160077033848">"Interní úložiště"</string>
     <string name="sd_memory" product="nosdcard" msgid="5456718463397723781">"Úložiště USB"</string>
-    <string name="sd_memory" product="default" msgid="3098344183202722455">"Karta SD"</string>
+    <string name="sd_memory" product="default" msgid="3098344183202722455">"SD karta"</string>
     <string name="memory_available" msgid="712528795743654737">"K dispozici"</string>
     <string name="memory_available_read_only" msgid="3201969221573511590">"K dispozici (pouze pro čtení)"</string>
     <string name="memory_size" msgid="2710897518522931469">"Celková paměť"</string>
@@ -1638,7 +1638,7 @@
     <string name="dlg_error_unmount_text" product="nosdcard" msgid="7876201891724279436">"Úložiště USB nelze odpojit. Zkuste to znovu později."</string>
     <string name="dlg_error_unmount_text" product="default" msgid="2185659901137961711">"Kartu SD nelze odpojit. Zkuste to znovu později."</string>
     <string name="unmount_inform_text" product="nosdcard" msgid="5932607205977999175">"Úložiště USB bude odpojeno."</string>
-    <string name="unmount_inform_text" product="default" msgid="716578785262713312">"Karta SD bude odpojena."</string>
+    <string name="unmount_inform_text" product="default" msgid="716578785262713312">"SD karta bude odpojena."</string>
     <string name="sd_ejecting_title" msgid="1641122369013595273">"Odpojování"</string>
     <string name="sd_ejecting_summary" msgid="861928572729341132">"Probíhá odpojování"</string>
     <string name="storage_low_title" msgid="8002650511493419567">"V úložišti je málo místa"</string>
@@ -1727,8 +1727,8 @@
     <string name="storage_wizard_init_v2_external_summary" msgid="6436419488235871823">"Přenos souborů a mediálního obsahu mezi zařízeními"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"Přenosné úložiště"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Nastavit později"</string>
-    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Naformátovat médium <xliff:g id="NAME">^1</xliff:g>?"</string>
-    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Chcete-li na médium <xliff:g id="NAME_0">^1</xliff:g> ukládat aplikace, soubory a další obsah, je třeba ho naformátovat. \n\nFormátováním z média <xliff:g id="NAME_1">^2</xliff:g> odstraníte všechen stávající obsah. Nechcete-li o obsah přijít, zálohujte si ho do jiného média <xliff:g id="NAME_2">^3</xliff:g> nebo do zařízení."</string>
+    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"<xliff:g id="NAME">^1</xliff:g> – naformátovat toto médium?"</string>
+    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Chcete-li na médium <xliff:g id="NAME_0">^1</xliff:g> ukládat aplikace, soubory a další obsah, je třeba ho naformátovat. \n\nZformátováním média <xliff:g id="NAME_1">^2</xliff:g> dojde k vymazání jeho obsahu. Zálohujte si obsah do jiného média (<xliff:g id="NAME_2">^3</xliff:g> či jiné zařízení), pokud o obsah nechcete přijít."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"Formátovat médium <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Přesunout obsah na médium <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_migrate_v2_body" product="tablet" msgid="4541523202790415721">"Na toto médium <xliff:g id="NAME">^1</xliff:g> můžete přesunout soubory, některé aplikace a další obsah. \n\nPřesunem uvolníte <xliff:g id="SIZE">^2</xliff:g> úložiště tabletu a potrvá to asi <xliff:g id="DURATION">^3</xliff:g>."</string>
@@ -2111,7 +2111,7 @@
     <string name="external_code_size_label" msgid="7375146402660973743">"Aplikace úložiště USB"</string>
     <string name="data_size_label" msgid="7814478940141255234">"Uživatelská data"</string>
     <string name="external_data_size_label" product="nosdcard" msgid="1054860423004751290">"Data úložiště USB"</string>
-    <string name="external_data_size_label" product="default" msgid="3370825186202856353">"Karta SD"</string>
+    <string name="external_data_size_label" product="default" msgid="3370825186202856353">"SD karta"</string>
     <string name="uninstall_text" msgid="315764653029060126">"Odinstalovat"</string>
     <string name="uninstall_all_users_text" msgid="5924715251087176474">"Odinstalovat pro všechny uživatele"</string>
     <string name="install_text" msgid="4558333621516996473">"Instalovat"</string>
