--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -44,9 +44,9 @@
     <string name="radioInfo_data_suspended" msgid="2001254415431299603">"Суспендирани"</string>
     <string name="radioInfo_unknown" msgid="2892562356748600367">"Непознато"</string>
     <string name="sdcard_unmount" product="nosdcard" msgid="1816306320988638382">"Одмонтирај USB меморија"</string>
-    <string name="sdcard_unmount" product="default" msgid="8078570285871053815">"Одмонтирај СД картичка"</string>
+    <string name="sdcard_unmount" product="default" msgid="8078570285871053815">"Одмонтирај SD-картичка"</string>
     <string name="sdcard_format" product="nosdcard" msgid="3248760426252305366">"Избриши USB меморија"</string>
-    <string name="sdcard_format" product="default" msgid="3676635435136326182">"Избриши СД картичка"</string>
+    <string name="sdcard_format" product="default" msgid="3676635435136326182">"Избриши SD-картичка"</string>
     <string name="preview_pager_content_description" msgid="3762247188224576303">"Преглед"</string>
     <string name="preview_page_indicator_content_description" msgid="2790254666634885865">"Преглед, страница <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> од <xliff:g id="NUM_PAGES">%2$d</xliff:g>"</string>
     <string name="font_size_summary" msgid="1296835853522566260">"Намалете го или зголемете го текстот на екранот."</string>
@@ -196,19 +196,19 @@
     <string name="sdcard_settings_screen_mass_storage_text" msgid="129059989000252994">"Овозможи масовна меморија на USB"</string>
     <string name="sdcard_settings_total_bytes_label" msgid="5298511430610207103">"Вкупно бајти:"</string>
     <string name="sdcard_settings_not_present_status" product="nosdcard" msgid="6189761476582690998">"USB меморијата не е монтирана."</string>
-    <string name="sdcard_settings_not_present_status" product="default" msgid="6601962586941623203">"Нема СД картичка."</string>
+    <string name="sdcard_settings_not_present_status" product="default" msgid="6601962586941623203">"Нема SD-картичка."</string>
     <string name="sdcard_settings_available_bytes_label" msgid="7721283102767669004">"Расположливи бајти:"</string>
     <string name="sdcard_settings_mass_storage_status" product="nosdcard" msgid="4878190674458263222">"USB како уред за масов. мемор."</string>
-    <string name="sdcard_settings_mass_storage_status" product="default" msgid="8850227049504860012">"СД картичката се користи како уред за масовно меморирање."</string>
+    <string name="sdcard_settings_mass_storage_status" product="default" msgid="8850227049504860012">"SD-картичката се користи како уред за масовно меморирање."</string>
     <string name="sdcard_settings_unmounted_status" product="nosdcard" msgid="1053258530368541571">"Сега е безбедно да ја отстраните USB меморијата."</string>
-    <string name="sdcard_settings_unmounted_status" product="default" msgid="5813940671700138561">"Сега е безбедно да се отстрани СД картичката."</string>
+    <string name="sdcard_settings_unmounted_status" product="default" msgid="5813940671700138561">"Сега е безбедно да се отстрани SD-картичката."</string>
     <string name="sdcard_settings_bad_removal_status" product="nosdcard" msgid="209564009449909311">"USB. отстр. додека во употр.!"</string>
     <string name="sdcard_settings_bad_removal_status" product="default" msgid="6817342973919819392">"SD картичката беше отстранета додека уште беше во употреба!"</string>
     <string name="sdcard_settings_used_bytes_label" msgid="5646588579332741943">"Искористени бајти:"</string>
     <string name="sdcard_settings_scanning_status" product="nosdcard" msgid="8037280964384235345">"Скен. USB мемор. за медиуми..."</string>
-    <string name="sdcard_settings_scanning_status" product="default" msgid="3297316465982471437">"Скенирање СД картичка за медиуми..."</string>
+    <string name="sdcard_settings_scanning_status" product="default" msgid="3297316465982471437">"Скенирање SD-картичка за медиуми..."</string>
     <string name="sdcard_settings_read_only_status" product="nosdcard" msgid="3444648373391629840">"USB монтирано само за читање."</string>
-    <string name="sdcard_settings_read_only_status" product="default" msgid="4338796260718910164">"СД картичката е монтирана само за читање."</string>
+    <string name="sdcard_settings_read_only_status" product="default" msgid="4338796260718910164">"SD-картичката е монтирана само за читање."</string>
     <string name="skip_label" msgid="6380034601349015895">"Прескокни"</string>
     <string name="next_label" msgid="1248293387735652187">"Следно"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Јазици"</string>
@@ -1524,7 +1524,7 @@
     <string name="storage_usb_settings" msgid="7058142934214211583">"Капацитет"</string>
     <string name="storage_settings_title" msgid="486118156723194815">"Подесување на меморија"</string>
     <string name="storage_settings_summary" product="nosdcard" msgid="3858049818577638926">"Одмонтирај USB меморија, погледни расположлива меморија"</string>
-    <string name="storage_settings_summary" product="default" msgid="267557695753980969">"Одмонтирај СД картичка, прикажи расположлива меморија"</string>
+    <string name="storage_settings_summary" product="default" msgid="267557695753980969">"Одмонтирај SD-картичка, прикажи расположлива меморија"</string>
     <string name="imei_multi_sim" msgid="71477088017585479">"IMEI (отвор за SIM %1$d)"</string>
     <string name="view_saved_network" msgid="1232387673095080910">"За преглед, изберете зачувана мрежа"</string>
     <string name="status_number" product="tablet" msgid="3597945414666253183">"MDN"</string>
@@ -1575,30 +1575,30 @@
     <string name="memory_media_misc_usage" msgid="7066851245178533269">"Други датотеки"</string>
     <string name="memory_media_cache_usage" msgid="780808666853685824">"Кеширани податоци"</string>
     <string name="sd_eject" product="nosdcard" msgid="6136102589751843304">"Одмонт. споделена мемор."</string>
-    <string name="sd_eject" product="default" msgid="8062832622096296251">"Одмонтирај СД картичка"</string>
+    <string name="sd_eject" product="default" msgid="8062832622096296251">"Одмонтирај SD-картичка"</string>
     <string name="sd_eject_summary" product="nosdcard" msgid="6859940774161708871">"Одмонтирај внатр. USB меморија"</string>
-    <string name="sd_eject_summary" product="default" msgid="5151243312587186226">"Одмонтирај СД картичка за да може безбедно да се отстрани"</string>
+    <string name="sd_eject_summary" product="default" msgid="5151243312587186226">"Одмонтирај SD-картичка за да може безбедно да се отстрани"</string>
     <string name="sd_insert_summary" product="nosdcard" msgid="9164545135649775664">"Вметни USB за монтирање"</string>
-    <string name="sd_insert_summary" product="default" msgid="5949168259622002192">"Вметни СД картичка за монтирање"</string>
+    <string name="sd_insert_summary" product="default" msgid="5949168259622002192">"Вметни SD-картичка за монтирање"</string>
     <string name="sd_mount" product="nosdcard" msgid="8305985249945415150">"Монтирај USB меморија"</string>
-    <string name="sd_mount" product="default" msgid="5279813999455776169">"Монтирај СД картичка"</string>
+    <string name="sd_mount" product="default" msgid="5279813999455776169">"Монтирај SD-картичка"</string>
     <string name="sd_mount_summary" product="nosdcard" msgid="2190410240845521205"></string>
     <string name="sd_mount_summary" product="default" msgid="2190410240845521205"></string>
     <string name="sd_format" product="nosdcard" msgid="8657427883364711513">"Избриши USB меморија"</string>
-    <string name="sd_format" product="default" msgid="9085302892248732329">"Избриши СД картичка"</string>
+    <string name="sd_format" product="default" msgid="9085302892248732329">"Избриши SD-картичка"</string>
     <string name="sd_format_summary" product="nosdcard" msgid="6179784504937189658">"Ги брише податоците во внатрешната USB меморија, како што се музика и фотографии"</string>
-    <string name="sd_format_summary" product="default" msgid="60583152211068164">"Ги брише сите податоци на СД картичката, како што се музика или фотографии"</string>
+    <string name="sd_format_summary" product="default" msgid="60583152211068164">"Ги брише сите податоци на SD-картичката, како што се музика или фотографии"</string>
     <string name="mtp_ptp_mode_summary" msgid="7969656567437639239">"Функцијата MTP или PTP е активна"</string>
     <string name="dlg_confirm_unmount_title" product="nosdcard" msgid="7694112411895701320">"Одмонтирај USB меморија?"</string>
-    <string name="dlg_confirm_unmount_title" product="default" msgid="8251329019960361646">"Одмонтирај СД картичка?"</string>
+    <string name="dlg_confirm_unmount_title" product="default" msgid="8251329019960361646">"Одмонтирај SD-картичка?"</string>
     <string name="dlg_confirm_unmount_text" product="nosdcard" msgid="1212025106709645023">"Ако ја одмонтирате USB меморијата, некои апликации што ги користите ќе запрат и може да се недостапни додека повторно не ја монтирате USB меморијата."</string>
-    <string name="dlg_confirm_unmount_text" product="default" msgid="3887768438615563697">"Ако ја одмонтирате СД картичката, некои од апликациите што ги користите ќе запрат и може да се недостапни, додека повторно не ја монтирате СД картичката."</string>
+    <string name="dlg_confirm_unmount_text" product="default" msgid="3887768438615563697">"Ако ја одмонтирате SD-картичката, некои од апликациите што ги користите ќе запрат и може да се недостапни, додека повторно не ја монтирате SD-картичката."</string>
     <string name="dlg_error_unmount_title" product="nosdcard" msgid="2205587942165199845"></string>
     <string name="dlg_error_unmount_title" product="default" msgid="2205587942165199845"></string>
     <string name="dlg_error_unmount_text" product="nosdcard" msgid="7876201891724279436">"Не може да се одмонтира USB меморијата. Обидете се повторно подоцна."</string>
-    <string name="dlg_error_unmount_text" product="default" msgid="2185659901137961711">"СД картичката не може да се одмонтира. Обидете се повторно подоцна."</string>
+    <string name="dlg_error_unmount_text" product="default" msgid="2185659901137961711">"SD-картичката не може да се одмонтира. Обидете се повторно подоцна."</string>
     <string name="unmount_inform_text" product="nosdcard" msgid="5932607205977999175">"USB меморијата ќе се одмонтира."</string>
-    <string name="unmount_inform_text" product="default" msgid="716578785262713312">"СД картичката ќе се одмонтира."</string>
+    <string name="unmount_inform_text" product="default" msgid="716578785262713312">"SD-картичката ќе се одмонтира."</string>
     <string name="sd_ejecting_title" msgid="1641122369013595273">"Одмонтирање"</string>
     <string name="sd_ejecting_summary" msgid="861928572729341132">"Одмонтирање во тек"</string>
     <string name="storage_low_title" msgid="8002650511493419567">"Капацитетот е речиси полн"</string>
@@ -1780,11 +1780,11 @@
     <string name="main_clear_desc_also_erases_esim" msgid="4553469876411831729"><li>"eSIM-картичките"</li></string>
     <string name="main_clear_desc_no_cancel_mobile_plan" msgid="369883568059127035">\n\n"Со ова нема да се откаже вашиот пакет за мобилни услуги."</string>
     <string name="main_clear_desc_erase_external_storage" product="nosdcard" msgid="4441604184663452046">\n\n"За да исчистите музика, слики и други податоци на корисникот, "<b>"меморијата"</b>" треба да се избрише."</string>
-    <string name="main_clear_desc_erase_external_storage" product="default" msgid="1498514970618215728">\n\n"За да исчистите музика, слики и други податоци на корисникот, "<b>"СД картичката"</b>" треба да се избрише."</string>
+    <string name="main_clear_desc_erase_external_storage" product="default" msgid="1498514970618215728">\n\n"За да исчистите музика, слики и други податоци на корисникот, "<b>"SD-картичката"</b>" треба да се избрише."</string>
     <string name="erase_external_storage" product="nosdcard" msgid="2182181846128639635">"Избриши USB меморија"</string>
-    <string name="erase_external_storage" product="default" msgid="2610056855012660451">"Избриши СД картичка"</string>
+    <string name="erase_external_storage" product="default" msgid="2610056855012660451">"Избриши SD-картичка"</string>
     <string name="erase_external_storage_description" product="nosdcard" msgid="6358699244894944843">"Избриши ги сите податоци во внатрешната USB меморија, како што се музика или фотографии"</string>
-    <string name="erase_external_storage_description" product="default" msgid="3367779850546310380">"Избриши ги сите податоци на СД картичката, како што се музика или фотографии"</string>
+    <string name="erase_external_storage_description" product="default" msgid="3367779850546310380">"Избриши ги сите податоци на SD-картичката, како што се музика или фотографии"</string>
     <string name="main_clear_button_text" product="tablet" msgid="6246087475569640671">"Избриши ги сите податоци"</string>
     <string name="main_clear_button_text" product="default" msgid="6246087475569640671">"Избриши ги сите податоци"</string>
     <string name="main_clear_final_desc" msgid="5800877928569039580">"Сите ваши лични информации и преземени апликации ќе се избришат. Ова дејство не може да се врати."</string>
@@ -2065,7 +2065,7 @@
     <string name="external_code_size_label" msgid="7375146402660973743">"Апликација за USB меморија"</string>
     <string name="data_size_label" msgid="7814478940141255234">"Кориснички податоци"</string>
     <string name="external_data_size_label" product="nosdcard" msgid="1054860423004751290">"Податоци на USB меморија"</string>
-    <string name="external_data_size_label" product="default" msgid="3370825186202856353">"СД картичка"</string>
+    <string name="external_data_size_label" product="default" msgid="3370825186202856353">"SD-картичка"</string>
     <string name="uninstall_text" msgid="315764653029060126">"Деинсталирај"</string>
     <string name="uninstall_all_users_text" msgid="5924715251087176474">"Деинсталирај за сите корисници"</string>
     <string name="install_text" msgid="4558333621516996473">"Инсталирај"</string>
@@ -2101,7 +2101,7 @@
     <string name="filter_apps_third_party" msgid="9049447784849114843">"Преземени"</string>
     <string name="filter_apps_running" msgid="535465683273284141">"Активни"</string>
     <string name="filter_apps_onsdcard" product="nosdcard" msgid="5140211657134608469">"USB меморија"</string>
-    <string name="filter_apps_onsdcard" product="default" msgid="1774499644768369891">"На СД картичка"</string>
+    <string name="filter_apps_onsdcard" product="default" msgid="1774499644768369891">"На SD-картичка"</string>
     <string name="not_installed" msgid="5074606858798519449">"Не е инсталирано за корисникот"</string>
     <string name="installed" msgid="2837449358488825884">"Инсталирана"</string>
     <string name="no_applications" msgid="985069304755391640">"Нема апликации."</string>
@@ -2124,7 +2124,7 @@
     <string name="move_app_to_internal" product="tablet" msgid="5799782476959541144">"Премести во таблет"</string>
     <string name="move_app_to_internal" product="default" msgid="7395498801589544372">"Премести во телефон"</string>
     <string name="move_app_to_sdcard" product="nosdcard" msgid="1145367822171576972">"Премести во USB меморија"</string>
-    <string name="move_app_to_sdcard" product="default" msgid="7161667212614143767">"Премести на СД картичка"</string>
+    <string name="move_app_to_sdcard" product="default" msgid="7161667212614143767">"Премести на SD-картичка"</string>
     <string name="another_migration_already_in_progress" msgid="6550546307856052261">"Друга миграција е веќе во тек."</string>
     <string name="insufficient_storage" msgid="8115088042669030558">"Нема доволно меморија."</string>
     <string name="does_not_exist" msgid="6499163879348776120">"Апликацијата не постои."</string>
@@ -3038,7 +3038,7 @@
     <string name="credentials_title" msgid="7535942196886123656">"Складирање акредитиви"</string>
     <string name="credentials_install" msgid="3933218407598415827">"Инсталирајте сертификат"</string>
     <string name="credentials_install_summary" product="nosdcard" msgid="6644116499934553975">"Инсталирајте сертификати од мемориски уред"</string>
-    <string name="credentials_install_summary" product="default" msgid="8161351950524166012">"Инсталирај сертификати од СД картичка"</string>
+    <string name="credentials_install_summary" product="default" msgid="8161351950524166012">"Инсталирај сертификати од SD-картичка"</string>
     <string name="credentials_reset" msgid="4246628389366452655">"Бришење акредитиви"</string>
     <string name="credentials_reset_summary" msgid="5400585520572874255">"Отстрани ги сите сертификати"</string>
     <string name="trusted_credentials" msgid="2522784976058244683">"Доверливи акредитиви"</string>
